--- a/TryTryNumber_V2Tests/Info.plist
+++ b/TryTryNumber_V2Tests/Info.plist
@@ -18,5 +18,7 @@
 	<string>1.0</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
+	<key>NSCameraUsageDescription</key>
+	<string>是否同意拍照</string>
 </dict>
 </plist>
